Add teacher cards

--- a/Graduation project/my-school/src/index.css
+++ b/Graduation project/my-school/src/index.css
@@ -13,3 +13,19 @@
   .btn--secondary {
     @apply bg-slate-100 text-slate-900;
   } */
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+/* ${style.boxWidth}  ${style.paddingX} */
